fix top background on mobile

--- a/src/sass/_top.sass
+++ b/src/sass/_top.sass
@@ -1,7 +1,7 @@
 .top
 	padding-bottom: 100vw
 	background-image: url('../img/wellness.svg'), linear-gradient(to right, #528b6a, #a8ceb9)
-	background-position: bottom 60px center, bottom
+	background-position: bottom 20px center, bottom
 	background-repeat: no-repeat
 	background-size: 90%, auto, contain
 	//background: 90%, auto, contain / bottom 60px center no-repeat url('../img/wellness-248.png'), linear-gradient(to right, #528b6a, #a8ceb9)
@@ -39,7 +39,7 @@
 	.top
 		//padding-bottom: calc(55vw + 20px)
 		//background: right bottom/65% no-repeat url('../img/wellness-490.png'), linear-gradient(to right, #528b6a, #a8ceb9)
-		//background-position: bottom 60px center, bottom
+		background-position: bottom 60px center, bottom
 		background-size: 80%, auto, contain
 
 		&__logo
